Bug 48469 - [4.7 Regression] bootstrap failure
Summary: [4.7 Regression] bootstrap failure
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-05 19:28 UTC by H.J. Lu
Modified: 2011-04-05 20:43 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-04-05 19:28:20 UTC
On Linux/ia32, revision 171995 gave

../../src-trunk/gcc/combine.c: In function 'combine_instructions':
../../src-trunk/gcc/combine.c:1142:17: error: unused variable 'links' [-Werror=unused-variable]
Comment 1 H.J. Lu 2011-04-05 19:30:49 UTC
It may be caused by revision 171995:

http://gcc.gnu.org/ml/gcc-cvs/2011-04/msg00188.html
Comment 2 Nathan Froyd 2011-04-05 19:33:52 UTC
Author: froydnj
Date: Tue Apr  5 19:33:49 2011
New Revision: 171998

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=171998
Log:
	PR bootstrap/48469
	* combine.c (combine_instructions): #ifdef AUTO_INC_DEC links
	declaration.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/combine.c
Comment 3 Steve Ellcey 2011-04-05 20:32:01 UTC
Is this the same problem I am seeing on IA64:

/proj/opensrc_nobackup/sje/reg/src/trunk/gcc/dbxout.c:107:12: error: 'debug_nesting' defined but not used [-Werror=unused-variable]
/proj/opensrc_nobackup/sje/reg/src/trunk/gcc/dbxout.c:109:14: error: 'symbol_queue' defined but not used [-Werror=unused-variable]
/proj/opensrc_nobackup/sje/reg/src/trunk/gcc/dbxout.c:110:12: error: 'symbol_queue_index' defined but not used [-Werror=unused-variable]
/proj/opensrc_nobackup/sje/reg/src/trunk/gcc/dbxout.c:111:12: error: 'symbol_queue_size' defined but not used [-Werror=unused-variable]
cc1: all warnings being treated as errors

I think it is coming from this change, though I don't see a ChangeLog
entry for it.

------------------------------------------------------------------------
r171981 | froydnj | 2011-04-05 05:02:55 -0700 (Tue, 05 Apr 2011) | 8 lines

        * debug.h (debug_flush_symbol_queue, debug_queue_symbol): Delete.
        (debug_free_queue, debug_nesting, symbol_queue_index): Delete.
        * final.c (debug_flush_symbol_queue, debug_queue_symbol):
        Move these...
        (debug_free_queue, debug_nesting, symbol_queue_index):
        ...and these...
        * dbxout.c: ...to here.  Make static.
Comment 4 Nathan Froyd 2011-04-05 20:36:15 UTC
No, it's not the same change.  If you like, you could open a different PR and I could attach a patch I think works.
Comment 5 Steve Ellcey 2011-04-05 20:43:47 UTC
I have submitted it as PR 48471.