	PR bootstrap/48469 	* combine.c (combine_instructions): #ifdef AUTO_INC_DEC links 	declaration.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@171998 138bc75d-0d04-0410-961f-82ee72b054a4